--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="isButtonActive">
   <div class="col-sm-10">
   </div>
   <div class="col-sm-2">
