--- a/src/app/class/class.component.html
+++ b/src/app/class/class.component.html
@@ -35,7 +35,7 @@
       <td>{{item.CreatedAt ? item.CreatedAt : '--'}}</td> 
       <td>
        <img src="../../assets/images/delete.png" class="clsDelete" (click)="deleteUser(item,i);">&nbsp;&nbsp;
-        <!-- <img src="../../assets/images/detail.png" class="clsDelete" (click)="viewClass(item,i);" style="cursor:pointer;"> -->
+        <img src="../../assets/images/detail.png" class="clsDelete" (click)="viewUser(item,i);" style="cursor:pointer;">
       </td>
     </tr>
     </tbody>
@@ -114,27 +114,33 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <h4 *ngIf="!updateButton">{{className}}</h4>
+        <h4 *ngIf="!updateButton">{{classesSubjects[0]?.accountType}}</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <!-- <button type="button" class="close" (click)="close()">&times;</button> -->
       </div>
+      <h5>Email : {{classesSubjects[0]?.Email}}</h5>
+      <h5>UserName : {{classesSubjects[0]?.UserName}}</h5><br>
+         <div class="row">
 
-      <table class="table table-hover">
-        <tr>
-          <th>S.No</th>
-          <th>Subject Name</th>
-        </tr>
-
-        <tr *ngFor="let item of classesSubjects;let i=index">
-          <td>{{i+1}}</td>
-          <td>{{item.subjectName}}</td>
-        </tr>
-
-        <tr *ngIf="!classesSubjects.length">
-          No subject added
-        </tr>
-
-      </table>
+    <div class="col-sm-3" *ngFor="let item of classesSubjects[0]?.roles">
+    {{item}} <input type="checkbox" name="{{item}}" (change)="addRole(item)" [checked]="true">
+   </div>
+   <!-- <div class="col-sm-3">
+     Edit Country <input type="checkbox" name="Edit Country" (change)="addRole('Edit Country')">
+   </div>
+   <div class="col-sm-3">
+     Delete Country <input type="checkbox" name="Delete Country" (change)="addRole('Delete Country')">
+   </div>
+   <div class="col-sm-3">
+     Add Capital <input type="checkbox" name="Add Capital" (change)="addRole('Add Capital')">
+   </div>
+   <div class="col-sm-3">
+     Edit Capital <input type="checkbox" name="Edit Capital" (change)="addRole('Edit Capital')">
+   </div>
+   <div class="col-sm-3">
+     Delete Capital <input type="checkbox" name="Delete Capital" (change)="addRole('Delete Capital')">
+   </div> -->
+   </div>
 
       </div>
       
