--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,10 @@
     <!-- <img src="../../assets/images/logo_TL.png" style="width:25%;"> -->
     <h3>Smart Controls</h3>
   </div>
-  <div class="col-sm-3" style="cursor:pointer;">
+  <div class="col-sm-3" style="cursor:pointer;color: blue">
+  
+  <a (click)="openCountry()">Country and their capital</a>&nbsp;&nbsp;
+
   <!-- 	<a (click)="openClasses()">Classes</a>&nbsp;&nbsp;
   	<a (click)="openSubject()">Subjects</a>&nbsp;&nbsp;
     <a (click)="openBoards()">Boards</a>&nbsp;&nbsp;
